# ethiotime

./: .gitignore  README.md  __init__.py  calendar_service.py  pyproject.toml  time_service.py  utils.py
tests/: test_calendar.py  test_time.py
