[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ethiotime"
version = "1.0.0"
authors = [
  { name="Bikila Ketema" },
]
description = "A production-ready Python library for Ethiopian calendar and time conversions."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/TODO/ethiotime"
"Bug Tracker" = "https://github.com/TODO/ethiotime/issues"

[tool.setuptools]
packages = ["ethiotime"]
package-dir = {"ethiotime": "."}
